# llm-cascade

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: cascade.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  persistence.rs  secrets.rs
src/cmd/: key.rs  mod.rs  run.rs  setup.rs
src/models/: conversation.rs  mod.rs  response.rs  tool.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  trait.rs
